# python-project-50

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: my_workflow.yml
gendiff/formatters/: format_identifier.py  json_formatter.py  plain.py  stylish.py
gendiff/scripts/: find_diff.py  gendiff.py  parser.py
tests/: test_gendiff.py
